--- a/desafios/d003/index.html
+++ b/desafios/d003/index.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="gato-preto.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Mapa Mundi</title>
 </head>
 <body>
-    <h1>Desafio do Mapa Mundi</h1>
-    <p>Agora é hora de treinar um pouco de Imagens,Parágrafos e Quebras de linha.</p>
-    <img src="mapa03.png" alt="Parte Norte do Canáda e o Alasca">
-    <img src="mapa07.png" alt="Groenlandia e Península Nordica">
-    <img src="mapa05.png" alt="Rússia"><br>
-    <img src="mapa09.png" alt="Estados Unidos, America Central e Norte da America do Sul">
-    <img src="mapa01.png" alt="Europa e parte Norte da Africa">
-    <img src="mapa08.png" alt="Asia"><br>
-    <img src="mapa06.png" alt="America do Sul">
-    <img src="mapa02.png" alt="Sul da Africa">
-    <img src="mapa04.png" alt="Austria">
+    <header>
+        <h1>Desafio do Mapa Mundi</h1>
+        <p>Agora é hora de treinar um pouco de Imagens,Parágrafos e Quebras de linha.</p>
+    </header>
+    <main>
+        <article>
+            <div>
+                <img src="mapa03.png" alt="Parte Norte do Canáda e o Alasca">
+                <img src="mapa07.png" alt="Groenlandia e Península Nordica">
+                <img src="mapa05.png" alt="Rússia"><br>
+                <img src="mapa09.png" alt="Estados Unidos, America Central e Norte da America do Sul">
+                <img src="mapa01.png" alt="Europa e parte Norte da Africa">
+                <img src="mapa08.png" alt="Asia"><br>
+                <img src="mapa06.png" alt="America do Sul">
+                <img src="mapa02.png" alt="Sul da Africa">
+                <img src="mapa04.png" alt="Austria">
+            </div>
+        </article>
+    </main>
 </body>
 </html>
