--- a/desafios/d004/index.html
+++ b/desafios/d004/index.html
@@ -4,39 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="gato-preto.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Emojis</title>
 </head>
 <body>
     <h1>Meus Emojis Favoritos</h1>
-    <h2>Carinhas</h2>
-    <ul><li>&#x1F60B U+1F60B</li>
-        <li>&#x1F644 U+1F644</li>
-        <li>&#x1F915 U+1F915</li>
-    </ul>
-    <h2>Mãos</h2>
-    <ul><li>&#x1F919 U+1F919</li>
-        <li>&#x1F44D U+1F44D</li>
-        <li>&#x1F64F U+1F64F</li>
-    </ul>
-    <h2>Animais</h2>
-    <ul><li>&#x1F412 U+1F412</li>
-        <li>&#x1F431 U+1F431</li>
-        <li>&#x1F436 U+1F436</li>
-    </ul>
-    <h2>Esportes</h2>
-    <ul><li>&#x26BD U+26BD</li>
-        <li>&#x1F3D0 U+1F3D0</li>
-        <li>&#x1F3AE U+1F3AE</li>
-    </ul>
-    <h2>Comidas</h2>
-    <ul><li>&#x1F965 U+1F965</li>
-        <li>&#x1F36B U+1F36B</li>
-        <li>&#x1F354 U+1F354</li>
-    </ul>
-    <h2>Objetos</h2>
-    <ul><li>&#x1F4B3 U+1F4B3</li>
-        <li>&#x1F6CF&#xFE0F U+1F6CF U+FE0F</li>
-        <li>&#x1F5A5&#xFE0F U+1F5A5 U+FE0F</li>
-    </ul>
+    <div id="carinhas">
+        <h2>Carinhas</h2>
+        <ul><li>&#x1F60B U+1F60B</li>
+            <li>&#x1F644 U+1F644</li>
+            <li>&#x1F915 U+1F915</li>
+        </ul>
+    </div>
+    <div id="maos">
+        <h2>Mãos</h2>
+        <ul><li>&#x1F919 U+1F919</li>
+            <li>&#x1F44D U+1F44D</li>
+            <li>&#x1F64F U+1F64F</li>
+        </ul>
+    </div>
+    <div id="animais">
+        <h2>Animais</h2>
+        <ul><li>&#x1F412 U+1F412</li>
+            <li>&#x1F431 U+1F431</li>
+            <li>&#x1F436 U+1F436</li>
+        </ul>
+    </div>
+    <div id="esportes">
+        <h2>Esportes</h2>
+        <ul><li>&#x26BD U+26BD</li>
+            <li>&#x1F3D0 U+1F3D0</li>
+            <li>&#x1F3AE U+1F3AE</li>
+        </ul>
+    </div>
+    <div id="comidas">
+        <h2>Comidas</h2>
+        <ul><li>&#x1F965 U+1F965</li>
+            <li>&#x1F36B U+1F36B</li>
+            <li>&#x1F354 U+1F354</li>
+        </ul>
+    </div>
+    <div id="objetos">
+        <h2>Objetos</h2>
+        <ul><li>&#x1F4B3 U+1F4B3</li>
+            <li>&#x1F6CF&#xFE0F U+1F6CF U+FE0F</li>
+            <li>&#x1F5A5&#xFE0F U+1F5A5 U+FE0F</li>
+        </ul>
+    </div>
 </body>
 </html>
