Atualizando o site social

--- a/desafios/d005/index.html
+++ b/desafios/d005/index.html
@@ -4,23 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/gato-preto.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Social</title>
 </head>
 <body>
-    <h1>Minhas Redes Sociais</h1>
-    <h2>Quem Sou eu</h2>
-    <img src="imagens/gato.png" alt="">
+    <main>
+    <header>
+        <h1>Sobre Isis Maria</h1>
+        <p>Aqui eu falo sobre mim e atualizo com os meus projetos mais importantes além de também possuir minhas redes sociais.</p>
+    </header>
+        <article>
+            <h2>Quem sou eu</h2>
+            <img id="fotominha" src="imagens/linda22.png" alt="">
+            <p>Meu nome é Isis Maria dos Santos tenho, pretendo trabalhar com Desenvolvimento Front-end e atualmente estudo HTML e CSS, pretendo me aventurar em JavaScript e futuramente é claro aprender outras linguagens de programação e etc. Comecei estudar essa área em 27/02/24 e quero aprender cada dia mais e ser uma ótima profissional.</p>
+        <aside id="projetos">
+            <div>
+                <h2>Alguns dos meus projetos</h2>
+            </div>
+            <h3>Site Android</h3>
+            <img class="imagemprojetos" src="imagens/siredoandroid.png" alt="Foto do meu outro site">
+            <a href="https://isoc4.github.io/html-css/desafios/d010/index.html">Acesse aqui.</a>
 
-    <p>Meu nome é Isis Maria dos Santos, estudo linguagens de programação como HTML <br> e CSS, pretendo me aventurar em JavaScript e futuramente é claro aprender <br> outras linguagens de programação. Comecei nessa área em 27/02/24 e quero aprender cada dia mais pra me aperfeiçoar nessa área e ser uma ótima profissional</p>
-
-    <h2>Entre em Contato Comigo</h2>
-    <ul>
-        <li><img src="imagens/instagram.png" alt="Ìcone do App Instagram"><a href="https://www.instagram.com/isis_.00/"> Meu Instagram</a> &larr; Entre em contato comigo la</li>
-
-        <li><img src="imagens/github.png" alt="Ìcone do Site Git Hub"><a href="https://github.com/isoc4"> Meu GitHub</a> &larr; Acesse Meu Git</li>
-
-        <li><img src="imagens/twitch.png" alt="Ìcone do App Twitch"><a href="https://www.twitch.tv/isisxz009"> Meu Twitch</a> &larr; Outro meio de falar comigo (não tão eficaz mas da certo)</li>
-    </ul>
-    
+            <h3>Site de Vídeos Favoritos</h3>
+            <img class="imagemprojetos" src="imagens/sitedosvideos.png" alt="Foto do meu outro site">
+            <a href="https://isoc4.github.io/html-css/desafios/d009/index.html">Acesse aqui. (site em manuntenção)</a>
+        </aside>
+        <aside>
+            <div>
+                <h2>Entre em Contato Comigo</h2>
+            </div>
+            <ul>
+                <li><img src="imagens/instagram.png" alt="Icone do App Instagram"><a href="https://www.instagram.com/isis_.00/" target="_blank"> Meu Instagram</a> &larr; Entre em contato comigo la</li>
+                <li><img src="imagens/github.png" alt="Icone do Site Git Hub"><a href="https://github.com/isoc4" target="_blank"> Meu GitHub</a> &larr; Acesse meu GitHub</li>
+                <li><img src="imagens/linkedin.png" alt="Icone do LinkedIn"><a href="https://www.linkedin.com/in/isis-maria-dos-santos-5991802b9/" target="_blank"> Meu LinkedIn</a> &larr; Acesse meu LinkedIn aqui</li>
+            </ul>
+        </aside>
+        </article>
+    </main>
 </body>
 </html>
