--- a/desafios/d009/index.html
+++ b/desafios/d009/index.html
@@ -8,18 +8,42 @@
 </head>
 <body>
     <header>
-        <h1>Meus Vídeos favoritos do jogo valorant</h1>
+        <h1>Meus vídeos favoritos de Valorant</h1>
     </header>
     <main>
-        <aside>
-            <a href="loudcampea.html"><img src="https://s2-ge.glbimg.com/i0woD1OkfCu59Sq99E66Gj9n6A0=/0x0:1920x1281/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2022/U/y/4QHLoCSJ2UCA7WIxeA7g/loud-cyw-dia-16-campeao-3.jpg" alt="Imagem da Loud campeã mundial de valorant" width="450" height="300"></img></a>
-            <br>
-            <a href="fofoletes.html"><img src="https://i.ytimg.com/vi/3S9gUf-mtzQ/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBRE7PDNSDB3bysUycTzTAwOADGZA" alt="Time Fofoletes de Valorant" width="450" height="300"></a>
-            <br>
-            <a href="saadhak.html"><img src="https://i.ytimg.com/vi/ecrnM7h1nXI/maxresdefault.jpg" alt="Imagem do ProPlayer de Valorant Saadhak como o Agente Gekko" width="450" height="300"></a>
-            <br>
-            <a href="xarola.html"><img src="https://i.ytimg.com/vi/HjzAu_HVHww/maxresdefault.jpg" alt="Imagem do jogador de valorant Xarola" width="450" height="300"></a>
-        </aside>
+        <article>
+                <aside>
+                    <a href="fofoletes.html"><img src="imagem/fofoletes1.png" alt=""></a>
+                    <p><strong>Curisosidade:</strong> O streamer Heitor “TcK” Tomazela liderou as transmissões de VALORANT na Twitch durante o mês de setembro. Em primeiro lugar nas lives da língua portuguesa, segundo o portal Stream Charts, o criador de conteúdo teve quase 700 mil horas assistidas durante o último mês e ficou a frente de Eduardo “Coreano” Martin e Matheus “XAROLA” Bezerra. <br> <em>(Por Gabriel Mansur/ 4 de outubro de 2023 - 15:00:00/ Site: 
+                    <strong><a href="https://valorantzone.gg" target="_blank">Valorantzone</a></strong>)</em></p>
+                </aside>
+                <br>
+                <aside>
+                    <a href="loudcampea.html"><img src="imagem/loud1.png" alt=""></a>
+                    <p><strong>Curisosidade:</strong> Loud (estilizado como LOUD) é a maior organização brasileira de esportes eletrônicos com equipes que competem em Free Fire, League of Legends e Valorant. Fundada em 2019, a LOUD é a organização de esportes eletrônicos com maior número de seguidores nas redes sociais do Brasil e a segunda maior do mundo. <br> <em>(Fonte: <strong><a href="https://pt.wikipedia.org/wiki/Wikipédia:Página_principal" target="_blank">Wikipédia</a></strong>)</em></p>
+                </aside>
+                <br>
+                <aside>
+                    <a href="saadhak.html"><img src="imagem/saadhak1.png" alt=""></a>
+                    <p><strong>Curisosidade:</strong> Matias 'Saadhak' Delipetro é um jogador profissional argentino de VALORANT esports, conhecido por seu carisma sua excelente atuação em campeonatos internacionais. Nascido em 8 de Março de 1997, Saadhak se juntou à LOUD em 3 de Fevereiro de 2022, e foi um dos responsáveis pela construção da equipe. <br> <em>(18/02/2024/ Fonte: não encontrada)</em></p>
+                </aside>
+                <br>
+                <aside>
+                    <a href="xarola.html"><img src="imagem/xarola1.png" alt=""></a>
+                    <p><strong>Curisosidade:</strong> O criador de conteúdo Xarola foi premiado como o título de streamer revelação no Prêmio Esports Brasil. Conhecido por suas lives divertidas e jogando de Yoru, o streamer de VALORANT conquistou o coração do público. <br> <em>(Por Fernando Schwabe/ 14 de dezembro de 2023 - 22:29:34/ Site: <strong><a href="https://valorantzone.gg" target="_blank">Valorantzone</a></strong>)</em></p>
+                </aside>
+                <br>
+                <aside>
+                    <a href="less.html"><img src="imagem/less1.png" alt=""></a>
+                    <p><strong>Curisosidade:</strong> Loud less de 19 anos é jogador do time da loud de valorant é campeão de titulos como o Valorant Champions de 2022 e o VCT Americas de 2023, ele é uma peça importantissima para o elenco atual da loud e chegou no time em 2022 como jovem prodígio pelas suas ótimas atuações. <br> <em>(Por Isis Maria/ 27 de março de 2024 22:05:00)</em></p>
+                </aside>
+                <br>
+                <aside>
+                    <a href="frttt.html"><img src="imagem/frttt1.png" alt=""></a>
+                    <p><strong>Curisosidade:</strong> Frttt pode até parecer um estranho para o mundo dos esports, mas seu passado deixa claro que ele não é nenhum novato. Ele chegou a atuar profissionalmente no CS 1.6 e Source, passando por times como YeaH e CNB. <br> <em>(Por Breno Deolindo/ 11 de abril de 2022 17:35:**/ Site: <strong><a href="https://ge.globo.com" target="_blank">ge.globo</a></strong>)</em>
+                    </p>
+                </aside>
+        </article>
     </main>
 </body>
 </html>
