--- a/desafios/d009/saadhak.html
+++ b/desafios/d009/saadhak.html
@@ -4,15 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus Videos Favoritos</title>
+    <style>
+
+        *{
+            margin: 0%;
+        }
+
+
+        body{
+            background-color: #1d1919;
+            color: #ffffff;
+        }
+
+        header{
+            padding: 20px;
+            text-align: center;
+        }
+
+        div{
+            padding-top: 100px;
+            text-align: center;
+        }
+
+        .link{
+            padding: 0%;
+        }
+
+        #texto{
+            color: #ffffff;
+            font-weight: bold;
+            text-decoration: none;
+        }
+
+        #texto:hover{
+            color: aquamarine;
+            text-transform: uppercase;
+        }
+    </style>
 </head>
 <body>
-    <h1>Gameplay de SaadHak</h1>
-    <iframe width="560" height="310" src="https://www.youtube.com/embed/ecrnM7h1nXI?si=sSSl_e4zaRaR_Pid" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <br>
-    <a href="https://www.youtube.com/@Saadhak" target="_blank">Canal do Saadhak.&#x2B50;</a>
-    <br>
-    <a href="index.html"><img src="imagem/seta-para-a-esquerda.png" alt="Seta apontando para o lado esquerdo"></a>
-    
-    
+    <header>
+        <h1>Gameplay de SaadHak</h1>
+    </header>
+    <main>
+        <div>
+            <iframe width="560" height="310" src="https://www.youtube.com/embed/ecrnM7h1nXI?si=sSSl_e4zaRaR_Pid" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <br>
+        <div class="link">
+            <a id="texto" href="https://www.youtube.com/@Saadhak" target="_blank">Canal do Saadhak.&#x2B50;</a>
+        </div>
+        <br>
+        <div class="link">
+            <a href="index.html"><img src="imagem/seta-para-a-esquerda.png" alt="Seta apontando para o lado esquerdo"></a>
+        </div>
+    </main>
 </body>
 </html>
