--- a/desafios/d009/fofoletes.html
+++ b/desafios/d009/fofoletes.html
@@ -4,13 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus Videos Favoritos</title>
+    <style>
+
+        *{
+            margin: 0%;
+        }
+
+        body{
+            background-color: #1d1919;
+            color: #ffffff;
+        }
+
+        header{
+            padding: 20px;
+            text-align: center;
+        }
+
+        div{
+            padding-top: 100px;
+            text-align: center;
+        }
+
+        .link{
+            padding: 0%;
+        }
+
+        #texto{
+            color: #ffffff;
+            font-weight: bold;
+            text-decoration: none;
+        }
+
+        #texto:hover{
+            color: aquamarine;
+            text-transform: uppercase;
+        }
+
+    </style>
 </head>
 <body>
-    <h1>Gameplay do Time Fofoletes</h1>
-    <iframe width="560" height="310" src="https://www.youtube.com/embed/2QLP5gVr2Ro?si=WRDIfSr7QCTWFaR1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <br>
-    <a href="https://www.youtube.com/@TcK10" target="_blank">Canal onde o vídeo foi postado.&#x2B50;</a>
-    <br>
-    <a href="index.html"><img src="imagem/seta-para-a-esquerda.png" alt="Seta apontando para o lado esquerdo"></a>
+    <header>
+        <h1>Gameplay do Time Fofoletes</h1>
+    </header>
+    <main>
+        <aside>
+            <div>
+                <iframe width="560" height="310" src="https://www.youtube.com/embed/2QLP5gVr2Ro?si=WRDIfSr7QCTWFaR1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <br>
+            <div class="link">
+                <a id="texto" href="https://www.youtube.com/@TcK10" target="_blank">Canal do TCK.&#x2B50;</a>
+            </div>
+            <br>
+            <div class="link">
+                <a href="index.html"><img src="imagem/seta-para-a-esquerda.png" alt="Seta apontando para o lado esquerdo"></a>
+            </div>
+        </aside>
+    </main>
 </body>
 </html>
