--- a/desafios/d009/frttt.html
+++ b/desafios/d009/frttt.html
@@ -15,27 +15,23 @@
             background-color: #1d1919;
             color: #ffffff;
         }
-
         header{
             padding: 20px;
             text-align: center;
         }
-
         div{
             padding-top: 100px;
             text-align: center;
         }
-
         .link{
             padding: 0%;
         }
-
         #texto{
             color: #ffffff;
             font-weight: bold;
             text-decoration: none;
         }
-        
+
         #texto:hover{
             color: aquamarine;
             text-transform: uppercase;
@@ -44,19 +40,16 @@
 </head>
 <body>
     <header>
-        <h1>Xarola Modo Prime</h1>
+        <h1>Gameplay do jogador Frttt</h1>
     </header>
     <div>
-        <iframe width="560" height="310" src="https://www.youtube.com/embed/l0ERKWJnP0k?si=hiCvJ-EvCtQmw5ay" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/MyQnIUaGJZk?si=LJt149xIxUGOFfUC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-    <br>
     <div class="link">
-        <a id="texto" href="https://www.youtube.com/@VdeValorant" target="_blank">Canal do VdeValorant.&#x2B50;</a>
+        <a id="texto" href="https://www.youtube.com/@FRTTT">Canal do Frttt.&#x2B50;</a>
     </div>
-    <br>
     <div class="link">
-        <a href="index.html"><img src="imagem/seta-para-a-esquerda.png" alt="Seta apontando para o lado esquerdo"></a>
+        <a href="index.html"><img src="imagem/seta-para-a-esquerda.png" alt=""></a>
     </div>
-    
 </body>
 </html>
