Atualizando parte de projetos do desafio 005

--- a/desafios/d005/index.html
+++ b/desafios/d005/index.html
@@ -27,7 +27,7 @@
 
             <h3>Site de Vídeos Favoritos</h3>
             <img class="imagemprojetos" src="imagens/sitedosvideos.png" alt="Foto do meu outro site">
-            <a href="https://isoc4.github.io/html-css/desafios/d009/index.html">Acesse aqui. (site em manuntenção)</a>
+            <a href="https://isoc4.github.io/html-css/desafios/d009/index.html">Acesse aqui.</a>
         </aside>
         <aside>
             <div>
