--- a/desafios/d009/fofoletes.html
+++ b/desafios/d009/fofoletes.html
@@ -40,6 +40,12 @@
             text-transform: uppercase;
         }
 
+        #video{
+            margin: auto;
+            width: 50%;
+            height: 400px;
+        }
+
     </style>
 </head>
 <body>
@@ -49,7 +55,7 @@
     <main>
         <aside>
             <div>
-                <iframe width="560" height="310" src="https://www.youtube.com/embed/2QLP5gVr2Ro?si=WRDIfSr7QCTWFaR1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe id="video" width="560" height="310" src="https://www.youtube.com/embed/2QLP5gVr2Ro?si=WRDIfSr7QCTWFaR1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <br>
             <div class="link">
