--- a/desafios/d009/frttt.html
+++ b/desafios/d009/frttt.html
@@ -36,6 +36,13 @@
             color: aquamarine;
             text-transform: uppercase;
         }
+
+        #video{
+            margin: auto;
+            width: 50%;
+            height: 400px;
+        }
+
     </style>
 </head>
 <body>
@@ -43,7 +50,7 @@
         <h1>Gameplay do jogador Frttt</h1>
     </header>
     <div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/MyQnIUaGJZk?si=LJt149xIxUGOFfUC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/MyQnIUaGJZk?si=LJt149xIxUGOFfUC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div class="link">
         <a id="texto" href="https://www.youtube.com/@FRTTT">Canal do Frttt.&#x2B50;</a>
