--- a/desafios/d009/xarola.html
+++ b/desafios/d009/xarola.html
@@ -40,6 +40,13 @@
             color: aquamarine;
             text-transform: uppercase;
         }
+
+        #video{
+            margin: auto;
+            width: 50%;
+            height: 400px;
+        }
+
     </style>
 </head>
 <body>
@@ -47,7 +54,7 @@
         <h1>Xarola Modo Prime</h1>
     </header>
     <div>
-        <iframe width="560" height="310" src="https://www.youtube.com/embed/l0ERKWJnP0k?si=hiCvJ-EvCtQmw5ay" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe id="video" width="560" height="310" src="https://www.youtube.com/embed/l0ERKWJnP0k?si=hiCvJ-EvCtQmw5ay" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <br>
     <div class="link">
