--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -7,16 +7,25 @@
     <style>
         body{
             height: 100vh;
-            background-color: rgb(85, 40, 40);
+            /* background-color: rgb(85, 40, 40);
             background-image: url('imagem/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            */
+
+            /* Short-hand
+                color > image > position > repeat > [size] > attachment
+            */
+
+            background: rgb(85, 40, 40) url('imagem/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkgoldenrod;
@@ -27,6 +36,11 @@
 <body>
     <main>
         <h1>Teste</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit totam et suscipit recusandae? Dicta, libero deserunt in, culpa harum fuga explicabo est similique cupiditate recusandae obcaecati, vero corrupti unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo in est dolorum obcaecati, fuga cupiditate eaque id et a, deserunt natus dolorem non recusandae illo eos ea eum ullam quo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, nihil voluptatum quis dolore maxime perferendis sunt officiis odio nobis repudiandae accusantium eaque qui inventore ipsam illo debitis accusamus pariatur consequuntur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit totam et suscipit recusandae? Dicta, libero deserunt in, culpa harum fuga explicabo est similique cupiditate recusandae obcaecati, vero corrupti unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo in est dolorum obcaecati, fuga cupiditate eaque id et a, deserunt natus dolorem non recusandae illo eos ea eum ullam quo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, nihil voluptatum quis dolore maxime perferendis sunt officiis odio nobis repudiandae accusantium eaque qui inventore ipsam illo debitis accusamus pariatur consequuntur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit totam et suscipit recusandae? Dicta, libero deserunt in, culpa harum fuga explicabo est similique cupiditate recusandae obcaecati, vero corrupti unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo in est dolorum obcaecati, fuga cupiditate eaque id et a, deserunt natus dolorem non recusandae illo eos ea eum ullam quo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, nihil voluptatum quis dolore maxime perferendis sunt officiis odio nobis repudiandae accusantium eaque qui inventore ipsam illo debitis accusamus pariatur consequuntur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit totam et suscipit recusandae? Dicta, libero deserunt in, culpa harum fuga explicabo est similique cupiditate recusandae obcaecati, vero corrupti unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo in est dolorum obcaecati, fuga cupiditate eaque id et a, deserunt natus dolorem non recusandae illo eos ea eum ullam quo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, nihil voluptatum quis dolore maxime perferendis sunt officiis odio nobis repudiandae accusantium eaque qui inventore ipsam illo debitis accusamus pariatur consequuntur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit totam et suscipit recusandae? Dicta, libero deserunt in, culpa harum fuga explicabo est similique cupiditate recusandae obcaecati, vero corrupti unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo in est dolorum obcaecati, fuga cupiditate eaque id et a, deserunt natus dolorem non recusandae illo eos ea eum ullam quo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, nihil voluptatum quis dolore maxime perferendis sunt officiis odio nobis repudiandae accusantium eaque qui inventore ipsam illo debitis accusamus pariatur consequuntur.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit totam et suscipit recusandae? Dicta, libero deserunt in, culpa harum fuga explicabo est similique cupiditate recusandae obcaecati, vero corrupti unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo in est dolorum obcaecati, fuga cupiditate eaque id et a, deserunt natus dolorem non recusandae illo eos ea eum ullam quo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, nihil voluptatum quis dolore maxime perferendis sunt officiis odio nobis repudiandae accusantium eaque qui inventore ipsam illo debitis accusamus pariatur consequuntur.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit totam et suscipit recusandae? Dicta, libero deserunt in, culpa harum fuga explicabo est similique cupiditate recusandae obcaecati, vero corrupti unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo in est dolorum obcaecati, fuga cupiditate eaque id et a, deserunt natus dolorem non recusandae illo eos ea eum ullam quo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, nihil voluptatum quis dolore maxime perferendis sunt officiis odio nobis repudiandae accusantium eaque qui inventore ipsam illo debitis accusamus pariatur consequuntur.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit totam et suscipit recusandae? Dicta, libero deserunt in, culpa harum fuga explicabo est similique cupiditate recusandae obcaecati, vero corrupti unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo in est dolorum obcaecati, fuga cupiditate eaque id et a, deserunt natus dolorem non recusandae illo eos ea eum ullam quo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, nihil voluptatum quis dolore maxime perferendis sunt officiis odio nobis repudiandae accusantium eaque qui inventore ipsam illo debitis accusamus pariatur consequuntur.</p>
