--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -7,20 +7,17 @@
     <style>
         body{
             height: 100vh;
-            /* background-color: rgb(85, 40, 40);
+            background-color: rgb(85, 40, 40);
             background-image: url('imagem/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
             background-attachment: fixed;
-            */
+            
 
             /* Short-hand
                 color > image > position > repeat > [size] > attachment
             */
-
-            background: rgb(85, 40, 40) url('imagem/wallpaper002.jpg') center center no-repeat fixed;
-            background-size: cover;
         }
 
         main{
