--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -24,8 +24,8 @@
         </p>
     </section>
 
-    <section class="paragrafo2">
-        <p id="paragrafo2">
+    <section id="paragrafo2">
+        <p>
             Não é mais como era antes<br>
             É tudo abreviado<br>
             "Você" só tem duas letras<br>
@@ -57,8 +57,8 @@
         </p>
     </section>
 
-    <section class="paragrafo5">
-        <p id="paragrafo5">
+    <section id="paragrafo5">
+        <p>
             Tenho saudade das cartas<br>
             Escritas com a própria mão<br>
             Mandava no mês de Junho<br>
