--- a/desafios/d005/index.html
+++ b/desafios/d005/index.html
@@ -22,12 +22,16 @@
                 <h2>Alguns dos meus projetos</h2>
             </div>
             <h3>Site Android</h3>
-            <img class="imagemprojetos" src="imagens/siredoandroid.png" alt="Foto do meu outro site">
+            <img class="imagemprojetos" src="imagens/siredoandroid.png" alt="Foto do meu site">
             <a href="https://isoc4.github.io/html-css/desafios/d010/index.html">Acesse aqui.</a>
 
             <h3>Site de Vídeos Favoritos</h3>
-            <img class="imagemprojetos" src="imagens/sitedosvideos.png" alt="Foto do meu outro site">
+            <img class="imagemprojetos" src="imagens/sitedosvideos.png" alt="Foto do meu site">
             <a href="https://isoc4.github.io/html-css/desafios/d009/index.html">Acesse aqui.</a>
+
+            <h3>Cordel Moderno</h3>
+            <img class="imagemprojetos" src="imagens/projetocordel.png" alt="Foto do meu site">
+            <a href="https://isoc4.github.io/projeto-cordel/">Acesse aqui.</a>
         </aside>
         <aside>
             <div>
