--- a/exercicios/ex021/caixa02.html
+++ b/exercicios/ex021/caixa02.html
@@ -131,7 +131,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido pela ISIS</p>
+        <p>Desenvolvido por ISIS</p>
     </footer>
     <div id="bola"></div>
 </body>
