--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -24,7 +24,7 @@
         }
 
         #q02{
-            background-image: linear-gradient(to bottom left, blue, green)
+            background-image: linear-gradient(to bottom left, blue, green);
         }
 
         #q03{
@@ -37,7 +37,7 @@
 
     </div>
     <div class="quadrado" id="q02">
-
+        
     </div>
     <div class="quadrado" id="q03">
 
