--- a/exercicios/ex026/mq001/index.html
+++ b/exercicios/ex026/mq001/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
-    <!--Essas são as Media Queries-->
+    <!--Esses links abaixo são as Media Queries-->
     <link rel="stylesheet" href="style/tela.css" media="screen">
     <link rel="stylesheet" href="style/impressora.css" media="print">
 </head>
