--- a/exercicios/ex026/mq002/index.html
+++ b/exercicios/ex026/mq002/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
-    <link rel="stylesheet" href="style/style.css" media="all">
+    <link rel="stylesheet" media="all" href="style/style.css">
+    <link rel="stylesheet" media="screen and (orientation: portrait)" href="style/mr.css">
+    <link rel="stylesheet" media="screen and (orientation: landscape)" href="style/mp.css">
 </head>
 <body>
     <h1>Gire a tela do seu dispositivo digital.</h1>
     
-    <!--MR(modo retrato) MP(modo paisagem)-->
+    <!--
+        *STYLE/MR.CSS*
+        (modo retrato) 
+
+        *STYLE/MP.CSS* 
+        (modo paisagem)
+    -->
 </body>
 </html>
