--- a/exercicios/ex026/mq003/index.html
+++ b/exercicios/ex026/mq003/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" media="all" href="style/style.css">
+    <link rel="stylesheet" media="screen and (orientation: portrait)" href="style/mr.css">
+    <link rel="stylesheet" media="screen and (orientation: landscape)" href="style/mp.css">
 </head>
 <body>
     <h1>Gire a tela do seu dispositivo digital.</h1>
@@ -16,7 +18,6 @@
         *STYLE/MP.CSS* 
         (modo paisagem)
     -->
-
-    <p>Declaração de Media Query para projetos menores. (Mudança na Declaração dos Códigos)</p>
+    <p>Declaração de Media Query para projetos maiores. (Mudança na Declaração dos Códigos)</p>
 </body>
 </html>
