fazendo ex026 mq004

--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" media="all" href="style/style.css">
+    <link rel="stylesheet" href="style/media-query.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img id="phone" src="imagem/icon-phone.png" alt="">
+        <img id="tablet" src="imagem/icon-tablet.png" alt="">
+        <img id="print" src="imagem/icon-print.png" alt="">
+        <img id="pc" src="imagem/icon-pc.png" alt="">
+        <img id="tv" src="imagem/icon-tv.png" alt="">
+    </main>
 </body>
 </html>
